--- a/home-master/package.json
+++ b/home-master/package.json
@@ -5,8 +5,8 @@
   "version": "2.0.0",
   "private": true,
   "author": {
-    "name": "Hashir Shoaib",
-    "email": "hashirshoaeb@gmail.com",
+    "name": "Guyon Alix",
+    "email": "roman.guyon@hotmail.com",
     "url": "https://github.com/GAlyxx"
   },
   "dependencies": {
