--- a/home-master/package.json
+++ b/home-master/package.json
@@ -8,6 +8,7 @@
     "name": "Guyon Alix",
     "email": "roman.guyon@hotmail.com",
     "url": "https://github.com/GAlyxx"
+    <your_username>.github.io
   },
   "dependencies": {
     "axios": "^0.19.2",
